# ispythepokemon

./: Dockerfile  LICENSE  README.md  database.db  db_scrapyer.ipynb  main.py  pokedex.csv  pyproject.toml
ispythepokemon/: app.py  models.py
ispythepokemon/static/: style.css
ispythepokemon/templates/: index.html
tests/: test_app.py
