[tool.poetry]
name = "i-spy-the-pokemon"
version = "0.1.0"
description = "I Spy the Pokemon App Using FastAPI"
authors = ["Dan Yeaw <dan@yeaw.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pandas = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
