[tool.poetry]
name = "ispythepokemon"
version = "0.1.0"
description = "I Spy the Pokemon App Using FastAPI"
authors = ["Dan Yeaw <dan@yeaw.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
sqlmodel = "^0.0.6"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pandas = "^1.4.3"
pytest = "^7.1.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
